[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ual"
version = "0.13.0"
description = "Utilities shared across UrbanAirLab projects"
readme = "README.md"
authors = [
  { name = "UrbanAirLab", email = "Marc.Golder@hs-heilbronn.de" },
]
requires-python = ">=3.10"
dependencies = [
    "dotenv>=0.9.9",
    "influxdb-client>=1.49.0",
    "isort>=8.0.1",
    "mypy>=1.20.2",
    "numpy>=2.2.6",
    "paho-mqtt>=2.1.0",
    "pandas>=2.3.3",
    "pip-audit>=2.10.0",
    "pytest>=8.4.2",
    "pyyaml>=6.0.3",
    "ruff>=0.15.12",
    "scipy>=1.15.3",
]
